--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,11 @@
-<nav class="navbar navbar-dark">
-    <div class="row">
-        <div class="col-2"></div>
-        <div class="col-4"></div>
-        <div class="col-1"></div>
-    </div>
+<nav class="navbar navbar-dark bg-dark ml-200">
+  <div class="container-fluid">
+    <div class="navbar-brand">Infinite...</div>
+    <ul class="nav">
+      <li class="nav-item"><a [routerLink]="['/']" class="nav-link text-light">Home</a></li>
+      <li class="nav-item"><a [routerLink]="['/item']" class="nav-link text-light">Item</a></li>
+      <li class="nav-item"><a [routerLink]="['/product']" class="nav-link text-light">Product</a></li>
+    </ul>
+    <div class="btn text-light">Contact</div>
+  </div>
 </nav>
