--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,6 @@
-<p>home works!</p>
-<a [routerLink]="['/item']" ><button>Go to Items</button></a>
-<a [routerLink]="['/product']" ><button>Go to Product</button></a>
+<div class="main-content-box">
+    <p>home works!</p>
+    <a [routerLink]="['/item']"><button>Go to Items</button></a>
+    <a [routerLink]="['/product']"><button>Go to Product</button></a>
+
+</div>
