--- a/src/app/items/items.component.html
+++ b/src/app/items/items.component.html
@@ -1,4 +1,8 @@
+<div class="main-content-box">
+    
 <p>items works!</p>
 
 <a [routerLink]="['/']" ><button>Go to Home</button></a>
 <a [routerLink]="['/product']" ><button>Go to Product</button></a>
+
+</div>
