--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -1,3 +1,6 @@
-<p>product works!</p>
-<a [routerLink]="['/']" ><button>Go to Home</button></a>
-<a [routerLink]="['/item']" ><button>Go to Item</button></a>
+<div class="main-content-box">
+    <p>product works!</p>
+    <a [routerLink]="['/']"><button>Go to Home</button></a>
+    <a [routerLink]="['/item']"><button>Go to Item</button></a>
+
+</div>
