--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,7 +2,7 @@
   <div class="container-fluid">
     <div class="navbar-brand">Infinite...</div>
     <ul class="nav">
-      <li class="nav-item"><a [routerLink]="['/']" class="nav-link text-light">Home</a></li>
+      <li class="nav-item"><a [routerLink]="['/']" class="nav-link text-light active">Home</a></li>
       <li class="nav-item"><a [routerLink]="['/item']" class="nav-link text-light">Item</a></li>
       <li class="nav-item"><a [routerLink]="['/product']" class="nav-link text-light">Product</a></li>
     </ul>
