--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,3 +1,15 @@
 .navbar-brand {
     font-family: var(--bs-font-monospace);
 }
+.nav-item a {
+    border-radius: 10px;
+    width: 100px;
+    text-align: center;
+
+}
+.nav .nav-item a 
+{&:hover {
+    background-color: white;
+    color: black !important;
+    border-radius: 10px;
+}}
