--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,39 @@
 <div class="main-content-box">
-    <p>home works!</p>
-    <a [routerLink]="['/item']"><button>Go to Items</button></a>
-    <a [routerLink]="['/product']"><button>Go to Product</button></a>
+  <div class="container mt-4">
+    <h2>Welcome to the world of new opportunity..</h2>
+    <div class="card">
+      <div class="card-body">
+
+        <div class="row">
+          <div class="col-6 text-cont mt-5">
+            <ul>
+              <li>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Amet, accusamus!</li>
+              <li>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore aspernatur soluta impedit
+                reiciendis veritatis doloremque.</li>
+              <li>Lorem ipsum dolor sit amet consectetur um! A, rerum?Lorem ipsum dolor sit
+                amet consectetur, adipisicing elit.</li>
+              <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit, earum! A, rerum?Lorem ipsum dolor sit
+                amet consectetur, adipisicing elit.</li>
+              <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit, earum! A, reor sit
+                amet consectetur, adipisicing elit.</li>
+              <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit, earum! A, rerum?Lorem ipsum dolor sit
+                amet consectetur, adipisicing elit.</li>
+              <li>Lorem ipsum dolor sit amet consectetit. Sit, earum! A, rerum?Lorem ipsum dolor sit
+                amet consectetur, adipisicing elit.</li>
+              <li>Lorem ipsum dolor sit amet consectr sit
+                amet consectetur, adipisicing elit.</li>
+              <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit, earum! A, rerum?Lorem ipsum dolor sit
+                amet consectetur, adipisicing elit.</li>
+              <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit, earum! A, rerum?Lorem ipsum dolor sit
+                amet consectetur, adipisicing Lorem ipsum dolor sit amet.</li>
+            </ul>
+          </div>
+          <div class="col-3 img-cont">
+            <img src="../../assets/images/img1.jpg" alt="infinite">
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 
 </div>
