Dashboard and Service Done

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,1 +1,62 @@
-<div class="main-content-box"></div>
+<div class="main-content-box">
+    <div class="container mt-4">
+        <h1 class="mb-3">Dashboard</h1>
+        <div class="card">
+            <div class="card-body" style="height: 550px;">
+                <div class="row m-4 mt-5">
+                    <div class="col"><div class="card">
+                            <div class="card-header">Social Media</div>
+                            <div class="card-body">
+                                <ul class="mt-2">
+                                    <li>Instagram</li>
+                                    <li>Whatsapp</li>
+                                    <li>Facebook</li>
+                                    <li>Twitter</li>
+                                </ul>
+                            </div>
+                        </div></div>
+                    <div class="col"><div class="card">
+                            <div class="card-header">Application</div>
+                            <div class="card-body">
+                                <ul class="mt-2">
+                                    <li>Id</li>
+                                    <li>Password</li>
+                                    <li>Log</li>
+                                    <li>Forgot</li>
+                                </ul>
+                            </div>
+                        </div></div>
+                </div>
+                <div class="row m-4">
+                    <div class="col"><div class="card">
+                            <div class="card-header">Third 6 Hours</div>
+                            <div class="card-body">Lorem ipsum dolor sit amet
+                                consectetur adipisicing elit. Quam dolor quidem
+                                minima
+                                quos dolore sed porro voluptatibus! Neque eaque
+                                error
+                                odit reprehenderit at tenetur. Perferendis.
+                                Lorem ipsum dolor sit amet consectetur
+                                adipisicing elit. Eius quos repellendus earum
+                                autem cum magni sequi voluptatibus eaque
+                                accusantium quam.</div>
+                        </div></div>
+                    <div class="col"><div class="card">
+                            <div class="card-header">Fourth 6 Hours</div>
+                            <div class="card-body">Lorem ipsum dolor sit amet
+                                consectetur adipisicing elit. Quam dolor quidem
+                                minima
+                                quos dolore sed porro voluptatibus! Neque eaque
+                                error
+                                odit reprehenderit at tenetur. Perferendis.
+                                Lorem ipsum dolor sit amet consectetur
+                                adipisicing elit. Eius quos repellendus earum
+                                autem cum magni sequi voluptatibus eaque
+                                accusantium quam.</div>
+                        </div></div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+</div>
