--- a/src/app/service/service.component.html
+++ b/src/app/service/service.component.html
@@ -1,1 +1,29 @@
-<div class="main-content-box"></div>
+<div class="main-content-box">
+    <div class="container mt-4"><h1 class="mb-3">Please fill form....</h1>
+        <div class="card" style="height: 550px;">
+            <form class="form-horizontal m-5">
+                <div class="form-group mb-3">
+                    <label for="firstName" class="f-18 mb-1">First Name :-</label>
+                    <input class="form-control" type="text">
+                </div>
+                <div class="form-group mb-3">
+                    <label for="lastName" class="f-18 mb-1">Last Name :-</label>
+                    <input class="form-control" type="text">
+                </div>
+                <div class="form-group mb-3">
+                    <label for="age" class="f-18 mb-1">Age :-</label>
+                    <input class="form-control" type="number">
+                </div>
+                <div class="form-group mb-3">
+                    <label for="phoneNumber" class="f-18 mb-1">Contact Number :-</label>
+                    <input class="form-control" type="number">
+                </div>
+                <div class="form-group mb-4">
+                    <label for="email" class="f-18 mb-1">Email Address :-</label>
+                    <input class="form-control" type="email">
+                </div>
+                <button type="submit" class="btn btn-primary">Done</button>
+            </form>
+        </div>
+    </div>
+</div>
