--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-dark bg-dark ml-200">
+<nav class="navbar navbar-dark bg-dark ml-200" style="z-index: 10;">
   <div class="container-fluid">
     <div class="navbar-brand">Infinite...</div>
     <ul class="nav">
@@ -6,6 +6,6 @@
       <li class="nav-item"><a [routerLink]="['/item']" class="nav-link text-light">Item</a></li>
       <li class="nav-item"><a [routerLink]="['/product']" class="nav-link text-light">Product</a></li>
     </ul>
-    <div class="btn text-light">Contact</div>
+    <div class="btn btn-light">Contact</div>
   </div>
 </nav>
