--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,6 +1,6 @@
 <div class="main-content-box">
     <div class="container mt-4">
-        <h1 class="mb-3">Dashboard</h1>
+        <h2 class="mb-3">Dashboard....</h2>
         <div class="card">
             <div class="card-body" style="height: 550px;">
                 <div class="row m-4 mt-5">
