--- a/src/app/service/service.component.html
+++ b/src/app/service/service.component.html
@@ -1,5 +1,6 @@
 <div class="main-content-box">
-    <div class="container mt-4"><h1 class="mb-3">Please fill form....</h1>
+    <div class="container mt-4">
+        <h2 class="mb-3">Please fill form....</h2>
         <div class="card" style="height: 550px;">
             <form class="form-horizontal m-5">
                 <div class="form-group mb-3">
