--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,5 @@
-<nav class="navbar navbar-dark bg-dark ml-200" style="z-index: 10;">
-  <div class="container-fluid">
+<nav class="navbar fixed-top navbar-dark bg-dark ml-200" style="z-index: 10;">
+  <div class="container-fluid ">
     <div class="navbar-brand">Infinite...</div>
     <ul class="nav">
       <li class="nav-item"><a [routerLink]="['/']" class="nav-link text-light active">Home</a></li>
