--- a/src/app/find/find.component.html
+++ b/src/app/find/find.component.html
@@ -1,1 +1,52 @@
-<div class="main-content-box"></div>
+<div class="main-content-box">
+  <div class="container mt-4 row">
+    <div class="col">
+      <h2 class="mb-3">Table....</h2>
+    </div>
+    <div class="col">
+      <input [(ngModel)]="find" (keypress) = "findSarif()" type="text" placeholder="search....." class="mb-3">
+    </div>
+    <div class="col d-flex justify-content-end">
+      <button class="btn btn-success" (click)="addSarif()"><i class="bi bi-plus"></i>&nbsp;Add Sarif</button>
+    </div>
+
+
+    <div class="card">
+      <div class="card-body" style="height: 550px;">
+        <table id="dtBasicExample" class="table table-striped table-bordered
+            table-m" cellspacing="0" width="100%">
+          <thead>
+            <tr>
+              <th class="th-sm">Name
+              </th>
+              <th class="th-sm">Address
+              </th>
+              <th class="th-sm">Mobile
+              </th>
+              <th class="th-sm">Age
+              </th>
+              <th class="th-sm">Weight (kg)
+              </th>
+              <th class="th-sm">Net Worth
+              </th>
+              <th class="th-sm">Remove
+              </th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr *ngFor="let item of sarifList">
+              <td>{{item.name}}</td>
+              <td>{{item.address}}</td>
+              <td>{{item.mobile}}</td>
+              <td>{{item.age}}</td>
+              <td>{{item.weight}}</td>
+              <td>{{item.netWorth |currency}}</td>
+              <td><i class="bi bi-trash cursor-pointer" (click)="deleteSarif(item.id)"></i></td>
+            </tr>
+
+        </table>
+      </div>
+    </div>
+
+  </div>
+</div>
