--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~bootstrap-icons/font/bootstrap-icons.css";
 .main-content-box{
+    margin-top: 85px;
     margin-left: 200px;
     width: calc(100%-200px);
 }
