--- a/src/app/find/find.component.html
+++ b/src/app/find/find.component.html
@@ -4,14 +4,14 @@
       <h2 class="mb-3">Table....</h2>
     </div>
     <div class="col">
-      <input [(ngModel)]="find" (keypress) = "findSarif()" type="text" placeholder="search....." class="mb-3">
+      <input [(ngModel)]="find" (ngModelChange) = "findSarif()" type="text" placeholder="Search....." class="mb-3">
     </div>
     <div class="col d-flex justify-content-end">
       <button class="btn btn-success" (click)="addSarif()"><i class="bi bi-plus"></i>&nbsp;Add Sarif</button>
     </div>
 
 
-    <div class="card">
+    <div class="card ms-2">
       <div class="card-body" style="height: 550px;">
         <table id="dtBasicExample" class="table table-striped table-bordered
             table-m" cellspacing="0" width="100%">
@@ -29,7 +29,7 @@
               </th>
               <th class="th-sm">Net Worth
               </th>
-              <th class="th-sm">Remove
+              <th class="th-sm text-center">Remove
               </th>
             </tr>
           </thead>
@@ -41,7 +41,7 @@
               <td>{{item.age}}</td>
               <td>{{item.weight}}</td>
               <td>{{item.netWorth |currency}}</td>
-              <td><i class="bi bi-trash cursor-pointer" (click)="deleteSarif(item.id)"></i></td>
+              <td class="text-center"><i class="bi bi-trash cursor-pointer" (click)="deleteSarif(item.id)"></i></td>
             </tr>
 
         </table>
