--- a/src/app/items/items.component.html
+++ b/src/app/items/items.component.html
@@ -1,13 +1,22 @@
 <div class="main-content-box">
-    <div class="container mt-4">
-        <h2>Future is here</h2>
-        <div class="card">
-            <div class="card-item">
-                <div>Space<span> <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample"><i class="bi bi-plus"></i></button></span></div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga molestias, suscipit nemo quisquam officiis illo, ipsa voluptatem, optio deserunt minima magnam voluptates sint explicabo dolor impedit cupiditate voluptatum quia eligendi odio excepturi? Amet omnis esse recusandae doloribus unde, deleniti, error accusamus rerum, deserunt inventore quas!</p>
-            </div>
-        </div> 
+  <div class="container mt-4">
+    <h2>Future is here</h2>
+    <div class="card">
+      <div class="card card-item">
+        <div> 
+            <button class="btn btn-primary" type="button" data-toggle="collapse"
+              data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">Space</button>
+        </div>
 
+        <div class="collapse" id="collapseExample">
+          <div class="card card-body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga molestias, suscipit
+            nemo quisquam officiis illo, ipsa voluptatem, optio deserunt minima magnam voluptates sint explicabo dolor
+            impedit cupiditate voluptatum quia eligendi odio excepturi? Amet omnis esse recusandae doloribus unde,
+            deleniti, error accusamus rerum, deserunt inventore quas!</div>
+        </div>
+      </div>
     </div>
+
+  </div>
 
 </div>
