--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -1,6 +1,44 @@
 <div class="main-content-box">
-    <p>product works!</p>
-    <a [routerLink]="['/']"><button>Go to Home</button></a>
-    <a [routerLink]="['/item']"><button>Go to Item</button></a>
+  <div class="container-fluid mt-4">
+    <h2>Someone's Dream</h2>
+  </div>
+  <div class="row gx-0 mt-4">
+    <div class="card col ms-3 bg-light">
+      <div class="img-container">
+        <img class="rounded mx-auto d-block" src="../../assets/images/img2.png" alt="tesla">
+      </div>
+      <div>
+        <div class="card-header text-center bg-info rounded">Tesla</div>
+        <div class="card-body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic, ea Lorem ipsum dolor sit amet.</div>
+      </div>
+    </div>
+    <div class="card col ms-3 bg-light">
+      <div class="img-container">
+        <img class="rounded mx-auto d-block" src="../../assets/images/img3.png" alt="tesla">
+      </div>
+      <div>
+        <div class="card-header text-center bg-primary rounded">Star Link</div>
+        <div class="card-body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic, ea Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sunt reiciendis vel maiores!</div>
+      </div>
+    </div>
+    <div class="card col ms-3 bg-light">
+      <div class="img-container">
+        <img class="rounded mx-auto d-block" src="../../assets/images/img7.jpg" alt="tesla">
+      </div>
+      <div>
+        <div class="card-header text-center bg-success rounded">Booring</div>
+        <div class="card-body">Lorem ipsum dolor sit amet consectetur Lorem ipsum dolor sit amet, consectetur adipisicing elit. adipisicing elit. Hic, ea.</div>
+      </div>
+    </div>
+    <div class="card col mx-3 bg-light">
+      <div class="img-container">
+        <img class="rounded mx-auto d-block" src="../../assets/images/img6.jpg" alt="tesla">
+      </div>
+      <div>
+        <div class="card-header text-center bg-warning rounded">Tesla Bot</div>
+        <div class="card-body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic, ea.</div>
+      </div>
+    </div>
+  </div>
 
 </div>
