--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -24,5 +24,6 @@ li {
 }
 .img-cont img:hover {
     right: 0%;
-    border: 2px solid rgb(169, 173, 109);
+    border: 2px solid rgb(252, 252, 250);
+    padding: 1px;
 }
