--- a/src/app/report/report.component.html
+++ b/src/app/report/report.component.html
@@ -1,1 +1,13 @@
-<div class="main-content-box"></div>
+<div class="main-content-box">
+    <p-accordion>
+        <p-accordionTab header="Header 1">
+           Content 1
+        </p-accordionTab>
+        <p-accordionTab header="Header 2">
+            Content 2
+        </p-accordionTab>
+        <p-accordionTab header="Header 3">
+            Content 3    
+        </p-accordionTab>
+    </p-accordion>
+</div>
