--- a/src/app/find/find.component.html
+++ b/src/app/find/find.component.html
@@ -13,7 +13,7 @@
 
     <div class="card ms-2">
       <div class="card-body" style="height: 550px;">
-        <table id="dtBasicExample" class="table table-striped table-bordered
+        <table id="dtBasicExample" class="table table-striped table-bordered table-hover
             table-m" cellspacing="0" width="100%">
           <thead>
             <tr>
