--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,5 +1,5 @@
 <div class="main-content-box">
-  <div class="container mt-4">
+  <div class="container-sm mt-4">
     <h2 class="mb-3">Dashboard....</h2>
     <div class="card">
       <div class="card-body rounded" style="height: 550px;">
