--- a/src/app/items/items.component.html
+++ b/src/app/items/items.component.html
@@ -1,6 +1,9 @@
 <div class="main-content-box">
   <div class="container mt-4">
     <h2>Future is here</h2>
+    <div class="progress mb-3">
+      <div class="progress-bar bg-dark progress-bar-striped progress-bar-animated" style="width:40%"></div>
+    </div>
     <div class="card">
       <div class="card card-item mt-4 mx-3">
         <div>
