--- a/src/app/find/find.component.html
+++ b/src/app/find/find.component.html
@@ -8,12 +8,14 @@
     </div>
     <div class="col d-flex justify-content-end">
       <button class="btn btn-success" (click)="addSarif()"><i class="bi bi-plus"></i>&nbsp;Add Sarif</button>
+      <button (click)="createPdf()">Create PDF</button>
+      
     </div>
 
 
     <div class="card ms-2">
       <div class="card-body" style="height: 550px;">
-        <table id="dtBasicExample" class="table table-striped table-bordered table-hover
+        <table id="dtBasicExample" class="table table table-dark table-striped table-hover
             table-m" cellspacing="0" width="100%">
           <thead>
             <tr>
@@ -45,7 +47,9 @@
             </tr>
 
         </table>
+        
       </div>
+      
     </div>
 
   </div>
