--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,7 +5,8 @@
       <li class="nav-item"><a [routerLink]="['/']" class="nav-link text-light active">Home</a></li>
       <li class="nav-item"><a [routerLink]="['/item']" class="nav-link text-light">Item</a></li>
       <li class="nav-item"><a [routerLink]="['/product']" class="nav-link text-light">Product</a></li>
+      <li class="nav-item"><a [routerLink]="['/trial']" class="nav-link text-light">Trial</a></li>
     </ul>
-    <div class="btn btn-outline-light">Contact</div>
+    <a [routerLink]="['/contact']" ><div class="btn btn-outline-light">Contact</div></a>
   </div>
 </nav>
