--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -33,7 +33,7 @@
             </ul>
           </div>
           <div class="col-3 img-cont">
-            <img src="../../assets/images/img1.jpg" alt="infinite">
+            <img src="../../assets/images/logo1.jpg" alt="infinite">
           </div>
         </div>
       </div>
