--- a/src/app/items/items.component.html
+++ b/src/app/items/items.component.html
@@ -4,7 +4,7 @@
     <div class="progress mb-3">
       <div class="progress-bar bg-dark progress-bar-striped progress-bar-animated" style="width:40%"></div>
     </div>
-    <div class="card">
+    <!-- <div class="card">
       <div class="card card-item mt-4 mx-3">
         <div>
           <button class="btn btn-secondary" style="min-width: 12%;text-align: left;" type="button" (click)="isCollapsed1 = !isCollapsed1"
@@ -57,7 +57,7 @@
             deleniti, error accusamus rerum, deserunt inventore quas!</div>
         </div>
       </div>
-    </div> -->
+    </div>  -->
 
 
   </div>
