--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,7 +6,14 @@
     width: calc(100%-200px);
 }
 body {
-    font-family: var(--bs-font-monospace) !important;
+    // font-family: var(--bs-font-monospace) !important;
+    // font-family: 'Lato', sans-serif !important;
+    font-family: 'Poppins', sans-serif !important;
+    // font-family: 'Nunito', sans-serif !important;
+    // font-family: 'Source Sans Pro', sans-serif !important;
+    // font-family: 'Oxygen', sans-serif !important;
+    // font-family: 'Inter', sans-serif !important;
+    // font-family: 'Sora', sans-serif !important;
 }
 .f-18{
     font-size: 18px;
