--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -10,7 +10,7 @@
               <li>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Amet, accusamus!</li>
               <li>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore aspernatur soluta impedit
                 reiciendis veritatis doloremque.</li>
-              <ul>
+              <ul style="position: relative;">
                 <li>Lorem ipsum dolor sit amet consectetur um! A, rerum?Lorem ipsum dolor sit
                   amet consectetur, adipisicing elit.</li>
                 <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit, earum! A, rerum?Lorem ipsum dolor sit
@@ -30,10 +30,10 @@
                 amet consectetur, adipisicing elit.</li>
               <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit, earum! A, rerum?Lorem ipsum dolor sit
                 amet consectetur, adipisicing Lorem ipsum dolor sit amet.</li>
-            </ul>
-          </div>
-          <div class="col-3 img-cont">
-            <img src="../../assets/images/logo1.jpg" alt="infinite">
+              </ul>
+            </div>
+            <div class="col-3 img-cont">
+            <img src="../../assets/images/logo11.png" alt="infinite">
           </div>
         </div>
       </div>
