--- a/src/app/items/items.component.html
+++ b/src/app/items/items.component.html
@@ -65,7 +65,7 @@
   <div class="card mx-4 mt-4 pb-4">
     <div class="row g-0 justify-content-between">
       <h5 class="mt-4 mb-4 mx-1 col-2 lh-base">Client List:</h5>
-      <input class="col-sm-2 m-auto p-2 rounded-3" style="height: 40px;" type="text" placeholder="Kuch likh to sahi...">
+      <input class="col-sm-2 m-auto p-2 rounded-3" style="height: 40px;" type="text" placeholder="Kuch likh to sahi..." [(ngModel)]="ungli" (ngModelChange)= "findBhidu()"> 
       <button class="btn btn-dark col-2 mx-3" (click)="addBhidu()">Gang Me Samil Kar <i class="bi bi-plus-circle"></i></button>
     </div>
     <table class="table table-hover container">
