rounded corner of menu

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,10 +2,10 @@
   <div class="container-fluid ">
     <div class="navbar-brand">Infinite...</div>
     <ul class="nav">
-      <li class="nav-item"><a [routerLink]="['/']" class="nav-link text-light active">Home</a></li>
-      <li class="nav-item"><a [routerLink]="['/item']" class="nav-link text-light">Item</a></li>
-      <li class="nav-item"><a [routerLink]="['/product']" class="nav-link text-light">Product</a></li>
-      <li class="nav-item"><a [routerLink]="['/trial']" class="nav-link text-light">Trial</a></li>
+      <li class="nav-item"><a [routerLink]="['/']" routerLinkActive="active" class="nav-link text-light active">Home</a></li>
+      <li class="nav-item"><a [routerLink]="['/item']" routerLinkActive="active" class="nav-link text-light">Item</a></li>
+      <li class="nav-item"><a [routerLink]="['/product']" routerLinkActive="active" class="nav-link text-light">Product</a></li>
+      <li class="nav-item"><a [routerLink]="['/trial']" routerLinkActive="active" class="nav-link text-light">Trial</a></li>
     </ul>
     <a [routerLink]="['/contact']" ><div class="btn btn-outline-light">Contact</div></a>
   </div>
