--- a/src/app/items/items.component.scss
+++ b/src/app/items/items.component.scss
@@ -4,9 +4,14 @@
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
-    background-color: rgba(5, 5, 5, 0.7);
+    background-color: rgba(0, 0, 0, 0.2);
     padding: 30px 50px;
     border-radius: 15px;
-    box-shadow: 3px 3px 20px rgba(51, 51, 51, 0.5), inset 3px 3px 20px rgba(255, 255, 255, 0.5);
-    backdrop-filter: blur(5px);
+    border: 1px solid rgba(0, 0, 0, 0.3);
+    border-right: 1px solid rgba(0, 0, 0, 0.2);
+    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+
+    // box-shadow: 3px 3px 20px rgba(51, 51, 51, 0.5), inset 3px 3px 20px rgba(255, 255, 255, 0.5);
+    box-shadow: 0px 25px 45px rgba(0, 0, 0, 0.2);
+    backdrop-filter: blur(3px);
 }
