--- a/src/app/items/items.component.html
+++ b/src/app/items/items.component.html
@@ -68,7 +68,7 @@
       <input class="col-sm-2 m-auto p-2 rounded-3" style="height: 40px;" type="text" placeholder="Kuch likh to sahi..." [(ngModel)]="ungli" (ngModelChange)= "findBhidu()"> 
       <button class="btn btn-dark col-2 mx-3" (click)="addBhidu()">Gang Me Samil Kar <i class="bi bi-plus-circle"></i></button>
     </div>
-    <table class="table table-hover container">
+    <table class="table table-hover container text-capitalize">
       <thead class="thead-dark">
         <tr>
           <th scope="col">Name</th>
@@ -93,7 +93,7 @@
   </div>
 </div>
 
-<form style="width: 40%;" class="form mx-4 mt-0" *ngIf="buttonPressed">
+<!-- <form style="width: 40%;" class="form mx-4 mt-0" *ngIf="buttonPressed">
   <div class="d-grid gap-2 d-md-flex justify-content-md-end">
     <button class="btn btn-warning" (click)="buttonPressed=false"><i class="bi bi-x-lg"></i></button>
   </div>
@@ -125,5 +125,40 @@
   <div class="d-grid gap-2 d-md-flex justify-content-md-end">
     <button class="btn btn-warning" type="submit" (click)="addNewMember()">
       Welcome To Gang </button>
+  </div>
+</form> -->
+
+<form style="width: 40%;" class="form mx-4 mt-0" [formGroup]="newClients" (ngSubmit)="newClientsAdd()" *ngIf="buttonPressed">
+  <div class="d-grid gap-2 d-md-flex justify-content-md-end">
+    <button class="btn btn-warning" (click)="buttonPressed=false"><i class="bi bi-x-lg"></i></button>
+  </div>
+  <h4 class="mb-4 text-dark col">Apni Detail Dal Varna Kat Dalunga:</h4>
+
+  <div class="form-floating mb-3">
+    <input type="text" class="form-control text-capitalize" id="floatingName" formControlName="name" placeholder="Chal Be Name likh" >
+    <label for="floatingName">Name Bata Bhidu</label>
+  </div>
+  <div class="form-floating mb-3">
+    <input type="text" class="form-control text-capitalize" id="floatingThikana" formControlName="thikana" placeholder="Kholi Kaha He" >
+    <label for="floatingThikana">Kahase Ho</label>
+  </div>
+  <div class="form-floating mb-3">
+    <input type="text" class="form-control text-capitalize" id="floatingDhandha" formControlName="dhandha" placeholder="Kam Kya Karta He Be" >
+    <label for="floatingDhandha">Dhandha Bata</label>
+  </div>
+  <div class="form-floating mb-3">
+    <input type="text" class="form-control text-capitalize" id="floatingOwner" formControlName="owner" placeholder="Kiska Kutta He" >
+    <label for="floatingOwner">Apne Baap Ka Name Likh</label>
+  </div>
+  <div class="form-floating mb-3">
+    <select class="form-select form-select mb-3" formControlName="status" id="floatingStatus" >
+      <option value="Jinda" id="Status">Jinda</option>
+      <option value="Murda">Murda</option>
+    </select>
+    <label for="floatingStatus">Jinda He Ke Tapak Gaya</label>
+  </div>
+  <button class="btn btn-warning" type="submit" [disabled]="!newClients.valid">
+    Welcome To Gang </button>
+  <div class="d-grid gap-2 d-md-flex justify-content-md-end">
   </div>
 </form>
