--- a/src/app/trial/trial.component.html
+++ b/src/app/trial/trial.component.html
@@ -1,7 +1,17 @@
 <div class="main-content-box">
   <div class="row text-center">
-    <div class="col-3">
-
+    <div class="col-3 mx-auto">
+      <form [formGroup]="newBhidu" (ngSubmit)="onSubmit()">
+        <div class="form-group">
+          <label for="name">Name</label>
+          <input id="name" type="text" formControlName ="name" class="form-control" >
+        </div>
+        <div class="form-group">
+          <label for="number">number</label>
+          <input id="number" type="number" formControlName ="number" class="form-control" >
+        </div>
+        <button type="submit" [disabled]="!newBhidu.valid" class="btn btn-warning">Submit</button>
+      </form>
     </div>
   </div>
 </div>
