--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,8 +1,15 @@
 <div class="sidebar">
+    <div class="navbar-brand mx-4 mt-4 logo">
+        <img class="position-absolute" src="../../assets/images/tesla1.png" alt="Tesla"></div>
     <ul class="navbar-nav">
-        <li class="nav-item"><a class="nav-link" [routerLink]="['/dashboard']">Dashbord</a></li>
+        <li class="nav-item"><a class="nav-link" [routerLink]="['/']"  >Home</a></li>
         <li class="nav-item"><a class="nav-link" [routerLink]="['/service']"  >Service</a></li>
+        <li class="nav-item"><a class="nav-link" [routerLink]="['/product']"  >Product</a></li>
+        <li class="nav-item"><a class="nav-link" [routerLink]="['/item']"  >Item</a></li>
+        <li class="nav-item"><a class="nav-link" [routerLink]="['/dashboard']">Dashbord</a></li>
         <li class="nav-item"><a class="nav-link" [routerLink]="['/find']" >Find</a></li>
         <li class="nav-item"><a class="nav-link" [routerLink]="['/report']"  >Report</a></li>
+        <li class="nav-item"><a class="nav-link" [routerLink]="['/trial']"  >Trial</a></li>
+        <li class="nav-item"><a class="nav-link" [routerLink]="['/contact']"  >Contact Us</a></li>
     </ul>
 </div>
