--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -2,14 +2,14 @@
     <div class="navbar-brand mx-4 mt-4 logo">
         <img class="position-absolute" src="../../assets/images/tesla1.png" alt="Tesla"></div>
     <ul class="navbar-nav">
-        <li class="nav-item"><a class="nav-link" [routerLink]="['/']"  >Home</a></li>
-        <li class="nav-item"><a class="nav-link" [routerLink]="['/service']"  >Service</a></li>
-        <li class="nav-item"><a class="nav-link" [routerLink]="['/product']"  >Product</a></li>
-        <li class="nav-item"><a class="nav-link" [routerLink]="['/item']"  >Item</a></li>
-        <li class="nav-item"><a class="nav-link" [routerLink]="['/dashboard']">Dashbord</a></li>
-        <li class="nav-item"><a class="nav-link" [routerLink]="['/find']" >Find</a></li>
-        <li class="nav-item"><a class="nav-link" [routerLink]="['/report']"  >Report</a></li>
-        <li class="nav-item"><a class="nav-link" [routerLink]="['/trial']"  >Trial</a></li>
-        <li class="nav-item"><a class="nav-link" [routerLink]="['/contact']"  >Contact Us</a></li>
+        <li class="nav-item"><a class="nav-link" [routerLink]="['/']" [routerLinkActive]="['active']" [routerLinkActiveOptions]={exact:true}>Home</a></li>
+        <li class="nav-item"><a class="nav-link" [routerLink]="['/service']" [routerLinkActive]="['active']" >Service</a></li>
+        <li class="nav-item"><a class="nav-link" [routerLink]="['/product']" [routerLinkActive]="['active']" >Product</a></li>
+        <li class="nav-item"><a class="nav-link" [routerLink]="['/item']" [routerLinkActive]="['active']" >Item</a></li>
+        <li class="nav-item"><a class="nav-link" [routerLink]="['/dashboard']" [routerLinkActive]="['active']">Dashbord</a></li>
+        <li class="nav-item"><a class="nav-link" [routerLink]="['/find']" [routerLinkActive]="['active']" >Find</a></li>
+        <li class="nav-item"><a class="nav-link" [routerLink]="['/report']" [routerLinkActive]="['active']" >Report</a></li>
+        <li class="nav-item"><a class="nav-link" [routerLink]="['/trial']" [routerLinkActive]="['active']" >Trial</a></li>
+        <li class="nav-item"><a class="nav-link" [routerLink]="['/contact']" [routerLinkActive]="['active']" >Contact Us</a></li>
     </ul>
 </div>
