--- a/src/app/sidebar/sidebar.component.scss
+++ b/src/app/sidebar/sidebar.component.scss
@@ -30,7 +30,8 @@
       .active {
         color: black;
         background-color: white;
-        border-radius: 10px;
+        border-top-left-radius: 10px;
+        border-bottom-left-radius: 10px;
       }
     }
 
@@ -59,7 +60,8 @@
   color: black !important;
   background-color: white;
   position: relative;
-  border-radius: 10px;
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
 }
 
 
@@ -69,7 +71,8 @@ li a {
   height: 50px;
 }
 
-li:hover a::before, .active::before {
+li:hover a::before,
+.active::before {
   content: "";
   position: absolute;
   width: 30px;
@@ -81,7 +84,8 @@ li:hover a::before, .active::before {
   box-shadow: 15px -15px 0 0px white;
 }
 
-li:hover a::after, .active::after {
+li:hover a::after,
+.active::after {
   content: "";
   position: absolute;
   width: 30px;
