form data reset done

--- a/src/app/items/items.component.html
+++ b/src/app/items/items.component.html
@@ -152,7 +152,7 @@
   </div>
   <div class="form-floating mb-3">
     <select class="form-select form-select mb-3" formControlName="status" id="floatingStatus" >
-      <option value="Jinda" id="Status">Jinda</option>
+      <option value="Jinda">Jinda</option>
       <option value="Murda">Murda</option>
     </select>
     <label for="floatingStatus">Jinda He Ke Tapak Gaya</label>
