subcomponent in trial added

--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,4 +1,4 @@
-<div class="sidebar">
+<div class="sidebar overflow-hidden">
     <div class="navbar-brand mx-4 mt-4 logo">
         <img class="position-absolute" src="../../assets/images/tesla1.png" alt="Tesla"></div>
     <ul class="navbar-nav">
