--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,4 +1,4 @@
-<div class="main-content-box">
+<div class="">
     <div class="container contact">
       <div class="row">
         <div class="col-md-3 ">
