--- a/src/styles.scss
+++ b/src/styles.scss
@@ -26,3 +26,6 @@ body {
 
 /* Importing Datepicker SCSS file. */
 @import "~ngx-bootstrap/datepicker/bs-datepicker";
+
+/* Importing Bootstrap SCSS file. */
+@import "~bootstrap/scss/bootstrap";
