--- a/src/app/trial/trial.component.html
+++ b/src/app/trial/trial.component.html
@@ -2,7 +2,7 @@
   <div>
     <tabset>
       <tab heading="Contact Us" id="tab1">
-        <app-trial01></app-trial01>
+        <app-trial01 [trial01Data]="trialData"></app-trial01>
       </tab>
       <tab heading="Support">
         <app-trial02></app-trial02>
