--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,15 +1,21 @@
 <div class="sidebar overflow-hidden">
-    <div class="navbar-brand mx-4 mt-4 logo">
-        <img class="position-absolute" src="../../assets/images/tesla1.png" alt="Tesla"></div>
-    <ul class="navbar-nav">
-        <li class="nav-item"><a class="nav-link" [routerLink]="['/']" [routerLinkActive]="['active']" [routerLinkActiveOptions]={exact:true}>Home</a></li>
-        <li class="nav-item"><a class="nav-link" [routerLink]="['/service']" [routerLinkActive]="['active']" >Service</a></li>
-        <li class="nav-item"><a class="nav-link" [routerLink]="['/product']" [routerLinkActive]="['active']" >Product</a></li>
-        <li class="nav-item"><a class="nav-link" [routerLink]="['/item']" [routerLinkActive]="['active']" >Item</a></li>
-        <li class="nav-item"><a class="nav-link" [routerLink]="['/dashboard']" [routerLinkActive]="['active']">Dashbord</a></li>
-        <li class="nav-item"><a class="nav-link" [routerLink]="['/find']" [routerLinkActive]="['active']" >Find</a></li>
-        <li class="nav-item"><a class="nav-link" [routerLink]="['/report']" [routerLinkActive]="['active']" >Report</a></li>
-        <li class="nav-item"><a class="nav-link" [routerLink]="['/trial']" [routerLinkActive]="['active']" >Trial</a></li>
-        <li class="nav-item"><a class="nav-link" [routerLink]="['/contact']" [routerLinkActive]="['active']" >Contact Us</a></li>
-    </ul>
+  <div class="navbar-brand mx-4 mt-4 logo">
+    <img class="position-absolute" src="../../assets/images/tesla1.png" alt="Tesla"></div>
+  <ul class="navbar-nav">
+    <li class="nav-item"><a class="nav-link" [routerLink]="['/home']" [routerLinkActive]="['active']"
+        [routerLinkActiveOptions]={exact:true}>Home</a></li>
+    <li class="nav-item"><a class="nav-link" [routerLink]="['/service']" [routerLinkActive]="['active']">Service</a>
+    </li>
+    <li class="nav-item"><a class="nav-link" [routerLink]="['/product']" [routerLinkActive]="['active']">Product</a>
+    </li>
+    <li class="nav-item"><a class="nav-link" [routerLink]="['/item']" [routerLinkActive]="['active']">Item</a></li>
+    <li class="nav-item"><a class="nav-link" [routerLink]="['/dashboard']" [routerLinkActive]="['active']">Dashbord</a>
+    </li>
+    <li class="nav-item"><a class="nav-link" [routerLink]="['/find']" [routerLinkActive]="['active']">Find</a></li>
+    <li class="nav-item"><a class="nav-link" [routerLink]="['/report']" [routerLinkActive]="['active']">Report</a></li>
+    <li class="nav-item"><a class="nav-link" [routerLink]="['/trial']" [routerLinkActive]="['active']">Trial</a></li>
+    <li class="nav-item"><a class="nav-link" [routerLink]="['/contact']" [routerLinkActive]="['active']">Contact Us</a>
+    </li>
+  </ul>
+  <a [routerLink]="['/']"><button class="btn btn-warning mt-4 mx-4" (click)="onLogout()">Log Out</button></a>
 </div>
