--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,16 +1,19 @@
 <p-toast position="top-center" key="tc"></p-toast>
-<div class="container">
-    <div class="row justify-content-center">
-        <div class="col-5">
-            <div class="form-group">
-                <label for="exampleInputEmail1">Email address</label>
-                <input type="email" class="form-control" id="exampleInputEmail1" [(ngModel)]="email" aria-describedby="emailHelp" placeholder="Enter email">
-            </div>
-            <div class="form-group mt-3">
-                <label for="exampleInputPassword1">Password</label>
-                <input type="password" class="form-control" id="exampleInputPassword1" [(ngModel)]="password" placeholder="Password">
-            </div>
-            <button class="btn btn-primary mt-3" (click)="onLogin()">Login</button>
-        </div>
+<div class="row justify-content-center mx-0" style="height: 100vh;">
+  <div class="col-4 align-self-center justify-content-center">
+    <div class="form-group">
+      <label for="exampleInputEmail1">Email address</label>
+      <input type="email" class="form-control" id="exampleInputEmail1" [(ngModel)]="email" aria-describedby="emailHelp"
+        placeholder="Enter email">
     </div>
+    <div class="form-group mt-3">
+      <label for="exampleInputPassword1">Password</label>
+      <input type="password" class="form-control" id="exampleInputPassword1" [(ngModel)]="password"
+        placeholder="Password">
+    </div>
+    <div class="d-md-flex justify-content-md-between">
+        <button class="btn btn-primary mt-3" (click)="onLogin()">Login</button>
+        <a href="" (click)="onSignup()" class="">Sign up</a>
+    </div>
+  </div>
 </div>
